[gd_scene load_steps=9 format=3 uid="uid://c7dmtxqirlb2x"]

[ext_resource type="Script" path="res://Inventory/inventory_ui.gd" id="1_yb6pb"]
[ext_resource type="Texture2D" uid="uid://c8osrol4alxsw" path="res://asset/Inventory background.png" id="2_07hu8"]
[ext_resource type="PackedScene" uid="uid://be67m4algo8y1" path="res://Inventory/inventory_ui_slot.tscn" id="3_68uht"]
[ext_resource type="Texture2D" uid="uid://ccf50ttkylhsg" path="res://asset/MenuButton/SelectA.png" id="4_5qq7m"]
[ext_resource type="Script" path="res://Inventory/ItemSelect.gd" id="4_qhu7n"]
[ext_resource type="Texture2D" uid="uid://r5okskyelia2" path="res://asset/MenuButton/SelectC.png" id="4_uqbh0"]
[ext_resource type="Texture2D" uid="uid://c0ru03umw4qdr" path="res://asset/InventorySlot.png" id="7_f8yjd"]
[ext_resource type="FontFile" uid="uid://b2nh2smgavidr" path="res://asset/Fonts/karmatic-arcade.regular.ttf" id="8_j6167"]

[node name="inventory_ui" type="Control"]
custom_minimum_size = Vector2(505, 371)
layout_mode = 3
anchors_preset = 0
offset_right = 522.0
offset_bottom = 371.0
script = ExtResource("1_yb6pb")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
offset_right = 549.0
offset_bottom = 388.0
texture = ExtResource("2_07hu8")
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -166.0
offset_right = 240.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="Inventory_ui_slot1" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -53.0
offset_right = 58.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -53.0
offset_right = 58.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot8"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot9" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot9"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot10" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot10"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot11" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot11"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="Inventory_ui_slot12" parent="NinePatchRect/GridContainer" instance=ExtResource("3_68uht")]
layout_mode = 2

[node name="Selection" type="TextureButton" parent="NinePatchRect/GridContainer/Inventory_ui_slot12"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -55.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
toggle_mode = true
texture_normal = ExtResource("4_5qq7m")
texture_pressed = ExtResource("4_uqbh0")
stretch_mode = 3
script = ExtResource("4_qhu7n")

[node name="ItemDescription" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="ItemDescription"]
offset_left = 553.0
offset_right = 813.0
offset_bottom = 388.0
texture = ExtResource("2_07hu8")
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="Panel" type="Panel" parent="ItemDescription/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -158.0
offset_right = 57.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ui_slot_image" type="Sprite2D" parent="ItemDescription/NinePatchRect/Panel"]
scale = Vector2(1.82813, 1.70313)
texture = ExtResource("7_f8yjd")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="ItemDescription/NinePatchRect/Panel"]
custom_minimum_size = Vector2(118, 109)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -54.5
offset_right = 59.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ItemDescription/NinePatchRect/Panel/CenterContainer"]
layout_mode = 2
tooltip_text = "testing"

[node name="item_display" type="Sprite2D" parent="ItemDescription/NinePatchRect/Panel/CenterContainer/Panel"]
scale = Vector2(0.3, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="ItemDescription/NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -238.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="Name" type="Label" parent="ItemDescription/NinePatchRect/VBoxContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Desc" type="Label" parent="ItemDescription/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="ItemDescription/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.5
offset_top = 8.0
offset_right = 81.5
offset_bottom = 31.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("8_j6167")
text = "Detail Barang"

[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot1/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot1/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot2/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot2/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot3/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot3/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot4/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot4/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot5/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot5/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot6/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot6/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot7/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot7/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot8/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot8/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot9/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot9/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot10/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot10/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot11/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot11/Selection" method="_on_toggled"]
[connection signal="toggled" from="NinePatchRect/GridContainer/Inventory_ui_slot12/Selection" to="NinePatchRect/GridContainer/Inventory_ui_slot12/Selection" method="_on_toggled"]
